Approval Adjustment and design of Ui add margin to bottom and add formgroup collections

--- a/app/components/labtest-module/for-labtest/for-labtest.component.html
+++ b/app/components/labtest-module/for-labtest/for-labtest.component.html
@@ -1188,7 +1188,7 @@
         </div>
         <div class="modal-body">
           <div class="titledivider">RAW MATERIAL INFORMATION</div>
-          <div class="form-row lbltext">
+          <div class="form-row lbltext mb-2">
             <label for="txtEditClientLocationName" class="col-sm-2 col-form-label lbltext">Item Code :</label>
             <div class="col-sm-4">
               <input type="text" readonly autocomplete="off" id="txtitem_code" class="form-control lbltext"
@@ -1218,7 +1218,7 @@
           </div>
 
           <div class="titledivider">LAB INFORMATION</div>
-          <div class="form-row lbltext">
+          <div class="form-row lbltext mb-2">
             <label for="txtEditClientLocationName" class="col-sm-2 col-form-label lbltext">PO NO. :</label>
             <div class="col-sm-4">
               <input type="text" readonly autocomplete="off" id="txtpo_number" class="form-control" name="po_number"
@@ -1232,7 +1232,7 @@
             </div>
           </div>
 
-          <div class="form-row lbltext">
+          <div class="form-row lbltext mb-2">
             <label for="drpEditClientLocation" class="col-sm-2 col-form-label lbltext">PR No. :
             </label>
             <div class="col-sm-4">
@@ -1247,7 +1247,7 @@
             </div>
           </div>
 
-          <div class="form-row lbltext">
+          <div class="form-row lbltext mb-2">
             <label for="txtEditClientLocationName" class="col-sm-2 col-form-label lbltext">Quantity :</label>
             <div class="col-sm-4">
               <input type="text" readonly autocomplete="off" id="txtquantity" class="form-control" name="qty_received"
@@ -1261,7 +1261,7 @@
             </div>
           </div>
 
-          <div class="form-row lbltext">
+          <div class="form-row lbltext mb-2">
             <label for="drpEditClientLocation" class="col-sm-2 col-form-label lbltext">Date Submitted :
             </label>
             <div class="col-sm-4">
@@ -1276,7 +1276,7 @@
             </div>
           </div>
 
-          <div class="form-row lbltext">
+          <div class="form-row lbltext mb-2">
             <label for="txtEditClientLocationName" class="col-sm-2 col-form-label lbltext">Requested By :</label>
             <div class="col-sm-4">
               <input type="text" readonly autocomplete="off" id="txtreq_by" class="form-control" name="lab_request_by"
@@ -1309,6 +1309,7 @@
             </div>
           </div>
 
+          <!-- {{superVisorApprovalForm.value | json}} -->
           <div class="titledivider">ADJUSTMENT</div>
           <div class="row">
             <div class="col-sm lbltext">
@@ -1319,7 +1320,7 @@
             <div class="col-sm lbltext">
               <label for="" class="">Expiry Date:</label>
               <input type="text" class="form-control" readonly autocomplete="off" id="txtbbd" class="form-control"
-                name="bbd" formControlName="lab_exp_date_extension" maxlength="30" />
+                name="bbd" formControlName="bbd" maxlength="30" />
             </div>
             <div class="col-sm lbltext">
               <label for="" class="">Shelf Life Extension:</label>
