--- a/app/components/labtest-module/for-labtest/for-labtest.component.html
+++ b/app/components/labtest-module/for-labtest/for-labtest.component.html
@@ -340,13 +340,13 @@
                           (click)="onManagerApproveDetailsClick(item)" data-toggle="modal"
                           data-target="#ManagerAapprovalModal" data-backdrop="false" data-keyboard="false"
                           title="Approve">
-                          <span class="fa fa-check-circle"></span> Approve By Manager
+                          <span class="fa fa-check-circle"></span> Approve
                         </button>
 
                         <button mat-stroked-button class="editbtnStyle" color="warn"
                           (click)="onManagerRejectDetailsClick(item)" data-toggle="modal"
                           data-target="#ManagerRejectModal" data-backdrop="false" data-keyboard="false" title="Reject">
-                          <span class="fa fa-times-circle"></span> Reject By Manager
+                          <span class="fa fa-times-circle"></span> Reject
                         </button>
                       </div>
                     </ng-container>
@@ -520,7 +520,7 @@
                     let item of labtestRecords
                       | filter: searchBy:searchText
                       | sort: sortBy:sortOrder
-                      | paging: currentPageIndex:pageSize;
+                      | paging: currentPageIndexLabRecords:pageSize;
                     let i = index
                   ">
                   <td><input type="checkbox" [id]="i" ngModel (ngModelChange)="getRowItem(item, $event)"></td>
@@ -556,67 +556,67 @@
 
         <div class="col-sm-12">
           <ul class="pagination paginationStyle justify-content-center mt-1">
-            <li class="page-item" (click)="onPageIndexClicked(currentPageIndex - 1)">
+            <li class="page-item" (click)="onPageIndexClickedForLabRecords(currentPageIndexLabRecords - 1)">
               <a mat-stroked-button color="primary" class="mr-1 font-color-black" href="#"
                 onclick="return false">Prev</a>
             </li>
 
-            <ng-container *ngIf="pages.length <= 10">
-              <li class="page-item" *ngFor="let page of pages" [ngClass]="{
-                  'link-active-paging': page.pageIndex == currentPageIndex
-                }" (click)="onPageIndexClicked(page.pageIndex)">
+            <ng-container *ngIf="pagesForLabRecords.length <= 10">
+              <li class="page-item" *ngFor="let page of pagesForLabRecords" [ngClass]="{
+                  'link-active-paging': page.pageIndex == currentPageIndexLabRecords
+                }" (click)="onPageIndexClickedForLabRecords(page.pageIndex)">
                 <a class="page-link" href="#" onclick="return false">{{
                   page.pageIndex + 1
                   }}</a>
               </li>
             </ng-container>
 
-            <ng-container *ngIf="pages.length > 10">
-              <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 0 }"
-                (click)="onPageIndexClicked(0)">
+            <ng-container *ngIf="pagesForLabRecords.length > 10">
+              <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexLabRecords == 0 }"
+                (click)="onPageIndexClickedForLabRecords(0)">
                 <a class="page-link" href="#" onclick="return false">1</a>
               </li>
 
-              <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 1 }"
-                (click)="onPageIndexClicked(1)">
+              <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexLabRecords == 1 }"
+                (click)="onPageIndexClickedForLabRecords(1)">
                 <a class="page-link" href="#" onclick="return false">2</a>
               </li>
 
               <li *ngIf="
-                  currentPageIndex > 1 && currentPageIndex < pages.length - 2
+                  currentPageIndexLabRecords > 1 && currentPageIndexLabRecords < pagesForLabRecords.length - 2
                 ">
                 &nbsp;...&nbsp;
               </li>
 
-              <li class="page-item" [ngClass]="'link-active-paging'" (click)="onPageIndexClicked(currentPageIndex)"
-                *ngIf="
-                  currentPageIndex > 1 && currentPageIndex < pages.length - 2
+              <li class="page-item" [ngClass]="'link-active-paging'"
+                (click)="onPageIndexClickedForLabRecords(currentPageIndexLabRecords)" *ngIf="
+                  currentPageIndexLabRecords > 1 && currentPageIndexLabRecords < pagesForLabRecords.length - 2
                 ">
                 <a class="page-link" href="#" onclick="return false">{{
-                  currentPageIndex + 1
+                  currentPageIndexLabRecords + 1
                   }}</a>
               </li>
 
               <li>&nbsp;...&nbsp;</li>
 
               <li class="page-item" [ngClass]="{
-                  'link-active-paging': currentPageIndex == pages.length - 2
-                }" (click)="onPageIndexClicked(pages.length - 2)">
+                  'link-active-paging': currentPageIndexLabRecords == pagesForLabRecords.length - 2
+                }" (click)="onPageIndexClickedForLabRecords(pagesForLabRecords.length - 2)">
                 <a class="page-link" href="#" onclick="return false">{{
-                  pages.length - 1
+                  pagesForLabRecords.length - 1
                   }}</a>
               </li>
 
               <li class="page-item" [ngClass]="{
-                  'link-active-paging': currentPageIndex == pages.length - 1
-                }" (click)="onPageIndexClicked(pages.length - 1)">
+                  'link-active-paging': currentPageIndexLabRecords == pagesForLabRecords.length - 1
+                }" (click)="onPageIndexClickedForLabRecords(pagesForLabRecords.length - 1)">
                 <a class="page-link" href="#" onclick="return false">{{
-                  pages.length
+                  pagesForLabRecords.length
                   }}</a>
               </li>
             </ng-container>
 
-            <li class="page-item" (click)="onPageIndexClicked(currentPageIndex + 1)">
+            <li class="page-item" (click)="onPageIndexClickedForLabRecords(currentPageIndexLabRecords + 1)">
               <a mat-stroked-button color="primary" class="ml-1 font-color-black" href="#"
                 onclick="return false">Next</a>
             </li>
@@ -1333,6 +1333,9 @@
               <label for="" class="">Expiry Date:</label>
               <input type="text" class="form-control" readonly autocomplete="off" id="txtbbd" class="form-control"
                 name="bbd" formControlName="bbd" maxlength="30" />
+
+
+                
             </div>
             <div class="col-sm lbltext">
               <label for="" class="">Shelf Life Extension:</label>
@@ -1349,6 +1352,28 @@
               </select>
             </div>
           </div>
+
+
+
+       
+          <div class="row" style="margin-top: 10px">
+
+            <div style="margin-left: 18px;">
+            <ng-container *ngIf="FilePath == 'image/jpeg'">
+              <a download="LabResult.jpg" href="assets/{{FileName}}" title="Download">
+                <div class="btn btn-success">Download</div>
+                <!-- <img alt="ImageName" src="assets/xx.JPG"> -->
+              </a>
+            </ng-container>
+  
+            <ng-container *ngIf="FilePath === 'application/pdf'">
+              <a download="LabResult.pdf" href="assets/{{FileName}}" title="Download">
+                <div class="btn btn-success">Download</div>
+              </a>
+            </ng-container>
+          </div>
+          </div>
+    
 
 
           <div class="row" style="margin-top: 10px" *ngIf="showhideSubRemDiv">
@@ -1384,6 +1409,9 @@
 
 
         </div>
+
+  
+
         <div class="modal-footer">
           <button mat-stroked-button color="accent" class="mr-1" id="QAVisorApprovalCancelModal" data-dismiss="modal"
             type="button">
@@ -1492,7 +1520,7 @@
             </label>
             <div class="col-sm-4">
               <input type="text" readonly autocomplete="off" id="txtdate_submitted" class="form-control"
-                name="date_submitted" formControlName="date_submitted" maxlength="30" />
+                name="lab_request_date" formControlName="lab_request_date" maxlength="30" />
             </div>
 
             <label for="drpEditClientLocation" class="col-sm-2 col-form-label lbltext">Date of Expiry :</label>
@@ -1530,7 +1558,7 @@
                 name="laboratory_procedure" formControlName="laboratory_procedure" maxlength="30" />
             </div>
           </div>
-<!-- 
+          <!-- 
           {{superVisorApprovalForm.value | json}} -->
           <div class="titledivider">ADJUSTMENT</div>
           <div class="row">
@@ -1558,7 +1586,7 @@
 
 
           <div class="row" style="margin-top: 10px">
-      
+
             <div style="margin-left: 18px;">
               <ng-container *ngIf="FilePath == 'image/jpeg'">
                 <a download="LabResult.jpg" href="assets/{{FileName}}" title="Download">
@@ -1567,9 +1595,9 @@
                 </a>
               </ng-container>
 
-              <ng-template *ngIf="FilePath === 'pdf'">
-                <a download="LabResult.pdf" href="assets/hello.PDF" title="Download">
-                  <div class="btn btn-success">Download</div>      
+              <ng-template *ngIf="FilePath === 'application/pdf'">
+                <a download="LabResult.pdf" href="assets/{{FileName}}" title="Download">
+                  <div class="btn btn-success">Download</div>
                 </a>
               </ng-template>
 
@@ -1694,7 +1722,7 @@
             <label for="txtEditClientLocationName" class="col-sm-2 col-form-label lbltext">Description :</label>
             <div class="col-md-4">
               <input type="text" readonly autocomplete="off" id="txtitem_description" class="form-control lbltext"
-                name="item_description" formControlName="item_description" maxlength="30" />
+                name="item_desc" formControlName="item_desc" maxlength="30" />
             </div>
           </div>
 
@@ -1762,7 +1790,7 @@
             </label>
             <div class="col-sm-4">
               <input type="text" readonly autocomplete="off" id="txtdate_submitted" class="form-control"
-                name="date_submitted" formControlName="date_submitted" maxlength="30" />
+                name="lab_request_date" formControlName="lab_request_date" maxlength="30" />
             </div>
 
             <label for="drpEditClientLocation" class="col-sm-2 col-form-label lbltext">Date of Expiry :</label>
