--- a/app/components/labtest-module/for-labtest/for-labtest.component.html
+++ b/app/components/labtest-module/for-labtest/for-labtest.component.html
@@ -630,6 +630,169 @@
           Records with Access Code
           &nbsp;
         </ng-template>
+
+
+        <div class="col-sm-12" style="padding-top: 2em">
+          <div class="d-flex">
+            <div class="p-2">
+              <div class="input-group searchBtnStyle">
+                <div class="input-group-prepend">
+                  <span class="input-group-text" id="basic-addon1"><span class="fa fa-filter"></span></span>
+                </div>
+                <select class="form-control" id="drpSearchBy" name="SearchBy"
+                  (change)="onFilterLabRecordsCategory($event.target.value)">
+                  <option value="">All</option>
+                  <option value="DRY">DRY</option>
+                  <option value="FRESH">FRESH</option>
+                </select>
+              </div>
+            </div>
+
+            <div class="p-2">
+              <div class="input-group searchBtnStyle">
+                <div class="input-group-prepend">
+                  <span class="input-group-text" id="basic-addon1"><span class="fa fa-search"></span></span>
+                </div>
+                <input type="search" class="form-control" placeholder="Find here...." id="txtSearchText"
+                  name="SearchText" autocomplete="off" [(ngModel)]="searchText"
+                  (keyup)="onSearchTextKeyupLabRecords($event)" />
+              </div>
+            </div>      
+          </div>
+        </div>
+
+
+        <div class="col-lg-12">
+          <div class="d-flex">
+            <div class="col-xl-12 col-lg-9 mx-auto scrollableTableMain tbl-text">
+              <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width: 100%">
+                <thead>
+                  <tr class="text-light header-bg-color-um system-name">
+                    <th></th>
+                    <th>Ref. No.</th>
+                    <th>PO No.</th>
+                    <th>Client</th>
+                    <th>Item Code</th>
+                    <th>Description</th>
+                    <th>Category</th>
+                    <th>Supplier</th>
+                    <th>Quantity</th>
+                    <th>Date Analyzed</th>
+                    <th>BBD</th>
+                    <th>Extension Date</th>
+                    <th>History</th>
+                    <th>Extended Days</th>
+                    <th>Aging</th>
+                    <th class="text-center">Actions</th>
+                  </tr>
+                </thead>
+                <tr *ngFor="
+                    let item of labtestRecordsWithCode
+                      | filter: searchBy:searchText
+                      | sort: sortBy:sortOrder
+                      | paging: currentPageIndexLabRecordsWithAccessCode:pageSize;
+                    let i = index
+                  ">
+                  <td><input type="checkbox" [id]="i" ngModel (ngModelChange)="getRowItem(item, $event)"></td>
+                  <td>{{ item.lab_req_id }}</td>
+                  <td>{{ item.po_number }}</td>
+                  <td>{{ item.client_requestor }}</td>
+                  <td>{{ item.item_code }}</td>
+                  <td>{{ item.item_desc }}</td>
+                  <td>{{ item.category }}</td>
+                  <td>{{ item.supplier }}</td>
+                  <td>{{ item.qty_received }}</td>
+                  <td>{{ item.qa_approval_date | date: "MM/dd/yyyy" }}</td>
+                  <td>{{ item.bbd | date: "MM/dd/yyyy" }}</td>
+                  <td>{{ item.lab_exp_date_extension | date: "MM/dd/yyyy" }}</td>
+                  <td>{{ item.historical }}</td>
+                  <td>{{ item.days_to_expired }}</td>
+                  <td>{{ item.lab_approval_aging_days }}</td>
+                  <td>
+                    <button mat-stroked-button class="editbtnStyle" color="black" data-toggle="modal" data-target="#"
+                      data-backdrop="false" data-keyboard="false" title="To Print" (click)="print(item)">
+                      <span class="fa fa-print"></span> Print
+                    </button>
+                    <button mat-stroked-button class="editbtnStyle" color="primary" data-toggle="modal"
+                      data-target="#viewPrintModal" data-backdrop="false" (click)="printpreview(item)"  data-keyboard="false" title="View">
+                      <span class="fa fa-eye"></span> View
+                    </button>
+                  </td>
+                </tr>
+              </table>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-12">
+          <ul class="pagination paginationStyle justify-content-center mt-1">
+            <li class="page-item" (click)="onPageIndexClickedForLabRecordsWithAccessCode(currentPageIndexLabRecordsWithAccessCode - 1)">
+              <a mat-stroked-button color="primary" class="mr-1 font-color-black" href="#"
+                onclick="return false">Prev</a>
+            </li>
+
+            <ng-container *ngIf="pagesForLabRecordsAccessCode.length <= 10">
+              <li class="page-item" *ngFor="let page of pagesForLabRecordsAccessCode" [ngClass]="{
+                  'link-active-paging': page.pageIndex == currentPageIndexLabRecordsWithAccessCode
+                }" (click)="onPageIndexClickedForLabRecordsWithAccessCode(page.pageIndex)">
+                <a class="page-link" href="#" onclick="return false">{{
+                  page.pageIndex + 1
+                  }}</a>
+              </li>
+            </ng-container>
+
+            <ng-container *ngIf="pagesForLabRecordsAccessCode.length > 10">
+              <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexLabRecordsWithAccessCode == 0 }"
+                (click)="onPageIndexClickedForLabRecordsWithAccessCode(0)">
+                <a class="page-link" href="#" onclick="return false">1</a>
+              </li>
+
+              <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexLabRecordsWithAccessCode == 1 }"
+                (click)="onPageIndexClickedForLabRecordsWithAccessCode(1)">
+                <a class="page-link" href="#" onclick="return false">2</a>
+              </li>
+
+              <li *ngIf="
+                  currentPageIndexLabRecordsWithAccessCode > 1 && currentPageIndexLabRecordsWithAccessCode < pagesForLabRecordsAccessCode.length - 2
+                ">
+                &nbsp;...&nbsp;
+              </li>
+
+              <li class="page-item" [ngClass]="'link-active-paging'"
+                (click)="onPageIndexClickedForLabRecordsWithAccessCode(currentPageIndexLabRecordsWithAccessCode)" *ngIf="
+                  currentPageIndexLabRecordsWithAccessCode > 1 && currentPageIndexLabRecordsWithAccessCode < pagesForLabRecordsAccessCode.length - 2
+                ">
+                <a class="page-link" href="#" onclick="return false">{{
+                  currentPageIndexLabRecordsWithAccessCode + 1
+                  }}</a>
+              </li>
+
+              <li>&nbsp;...&nbsp;</li>
+
+              <li class="page-item" [ngClass]="{
+                  'link-active-paging': currentPageIndexLabRecordsWithAccessCode == pagesForLabRecordsAccessCodelength - 2
+                }" (click)="onPageIndexClickedForLabRecordsWithAccessCode(pagesForLabRecordsAccessCode.length - 2)">
+                <a class="page-link" href="#" onclick="return false">{{
+                  pagesForLabRecordsAccessCode.length - 1
+                  }}</a>
+              </li>
+
+              <li class="page-item" [ngClass]="{
+                  'link-active-paging': currentPageIndexLabRecordsWithAccessCode == pagesForLabRecordsAccessCodelength - 1
+                }" (click)="onPageIndexClickedForLabRecordsWithAccessCode(pagesForLabRecordsAccessCode.length - 1)">
+                <a class="page-link" href="#" onclick="return false">{{
+                  pagesForLabRecordsAccessCode.length
+                  }}</a>
+              </li>
+            </ng-container>
+
+            <li class="page-item" (click)="onPageIndexClickedForLabRecordsWithAccessCode(currentPageIndexLabRecordsWithAccessCode + 1)">
+              <a mat-stroked-button color="primary" class="ml-1 font-color-black" href="#"
+                onclick="return false">Next</a>
+            </li>
+          </ul>
+        </div>
+
       </mat-tab>
       <!-- 
       Nearly Expiry items Viewing  Animal -->
